--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1264,6 +1264,7 @@ jobs:
       - LOAD_BALANCER: lb
       - ADMISSION_CONTROLLER: true
       - ROX_BADGER_DB: true
+      - ROX_IMAGE_SAC: true
 
     steps:
       - run-qa-tests:
@@ -1295,6 +1296,7 @@ jobs:
       - INFLUXDB_URL: "http://monitoring-1.us-central1-c.c.stackrox-ci.internal:8086"
       - LOAD_BALANCER: lb
       - ADMISSION_CONTROLLER: true
+      - ROX_IMAGE_SAC: true
 
     steps:
       - run-qa-tests:
@@ -1576,6 +1578,7 @@ jobs:
       - ROX_WHITELIST_GENERATION_DURATION: 1m
       - ROX_SCOPED_ACCESS_CONTROL: true
       - ROX_CLIENT_CA_AUTH: true
+      - ROX_IMAGE_SAC: true
 
     steps:
       - checkout
