Fix PSP for hostpath (stackrox/rox#3165)

--- a/image/templates/kubernetes/helm/centralchart/templates/pod-security-policy.yaml
+++ b/image/templates/kubernetes/helm/centralchart/templates/pod-security-policy.yaml
@@ -43,7 +43,7 @@ spec:
     - 'hostPath'
   {{if eq .Values.persistence.type "hostpath" -}}
   allowedHostPaths:
-    - {{.Values.persistence.value.hostPath.path}}
+    - pathPrefix: {{.Values.persistence.value.hostPath.path}}
   {{- end}}
   hostNetwork: false
   hostIPC: false
