Fix k8s-tests by setting ROX_IMAGE_SAC=true (stackrox/rox#3169)

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1125,6 +1125,7 @@ jobs:
       - ROX_PLAINTEXT_ENDPOINTS: "http@8080,grpc@8081"
       - ROX_CONFIG_MGMT_UI: true
       - ROX_BADGER_DB: true
+      - ROX_IMAGE_SAC: true
 
     steps:
       - checkout
