--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -791,6 +791,7 @@ jobs:
             - bin/linux/central
             - bin/linux/migrator
             - bin/linux/kubernetes
+            - bin/linux/upgrader
             - bin/linux/collection
             - image/docs # This will go into the image as generated docs.
             - image/keys
