--- a/image/templates/kubernetes/kubectl/sensor-rbac.yaml
+++ b/image/templates/kubernetes/kubectl/sensor-rbac.yaml
@@ -5,6 +5,7 @@ metadata:
   namespace: stackrox
   labels:
     app.kubernetes.io/name: stackrox
+    auto-upgrade.stackrox.io/component: "sensor"
 imagePullSecrets:
 - name: stackrox
 ---
@@ -15,6 +16,7 @@ metadata:
   namespace: stackrox
   labels:
     app.kubernetes.io/name: stackrox
+    auto-upgrade.stackrox.io/component: "sensor"
 imagePullSecrets:
 - name: stackrox
 ---
@@ -24,6 +26,7 @@ metadata:
   name: stackrox:monitor-deployments
   labels:
     app.kubernetes.io/name: stackrox
+    auto-upgrade.stackrox.io/component: "sensor"
 subjects:
 - kind: ServiceAccount
   name: sensor
@@ -39,6 +42,7 @@ metadata:
   name: stackrox:enforce-policies
   labels:
     app.kubernetes.io/name: stackrox
+    auto-upgrade.stackrox.io/component: "sensor"
 subjects:
 - kind: ServiceAccount
   name: sensor
@@ -55,6 +59,7 @@ metadata:
   namespace: stackrox
   labels:
     app.kubernetes.io/name: stackrox
+    auto-upgrade.stackrox.io/component: "sensor"
 subjects:
 - kind: ServiceAccount
   name: sensor
@@ -70,6 +75,7 @@ metadata:
   name: stackrox:network-policies
   labels:
     app.kubernetes.io/name: stackrox
+    auto-upgrade.stackrox.io/component: "sensor"
 rules:
   - resources:
     - 'networkpolicies'
@@ -90,6 +96,7 @@ metadata:
   name: stackrox:network-policies-binding
   labels:
     app.kubernetes.io/name: stackrox
+    auto-upgrade.stackrox.io/component: "sensor"
 subjects:
 - kind: ServiceAccount
   name: sensor
@@ -105,6 +112,7 @@ metadata:
   name: stackrox:view-nodes
   labels:
     app.kubernetes.io/name: stackrox
+    auto-upgrade.stackrox.io/component: "sensor"
 rules:
 - resources:
   - nodes
@@ -120,6 +128,7 @@ metadata:
   name: stackrox:view-nodes-binding
   labels:
     app.kubernetes.io/name: stackrox
+    auto-upgrade.stackrox.io/component: "sensor"
 subjects:
 - kind: ServiceAccount
   name: sensor
@@ -135,6 +144,7 @@ metadata:
   name: stackrox:update-namespaces
   labels:
     app.kubernetes.io/name: stackrox
+    auto-upgrade.stackrox.io/component: "sensor"
 rules:
 - resources:
   - namespaces
@@ -148,6 +158,7 @@ metadata:
   name: stackrox:update-namespaces-binding
   labels:
     app.kubernetes.io/name: stackrox
+    auto-upgrade.stackrox.io/component: "sensor"
 subjects:
 - kind: ServiceAccount
   name: sensor
@@ -163,6 +174,7 @@ metadata:
   name: stackrox:create-events
   labels:
     app.kubernetes.io/name: stackrox
+    auto-upgrade.stackrox.io/component: "sensor"
 rules:
 - resources:
   - events
@@ -178,6 +190,7 @@ metadata:
   name: stackrox:create-events-binding
   labels:
     app.kubernetes.io/name: stackrox
+    auto-upgrade.stackrox.io/component: "sensor"
 subjects:
 - kind: ServiceAccount
   name: sensor
@@ -193,6 +206,7 @@ metadata:
   name: stackrox:view-rbac
   labels:
     app.kubernetes.io/name: stackrox
+    auto-upgrade.stackrox.io/component: "sensor"
 rules:
 - resources:
   - roles
@@ -214,6 +228,7 @@ metadata:
   name: stackrox:view-rbac-binding
   labels:
     app.kubernetes.io/name: stackrox
+    auto-upgrade.stackrox.io/component: "sensor"
 subjects:
 - kind: ServiceAccount
   name: sensor
