--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -956,7 +956,7 @@ jobs:
 
             success="false"
             for i in {1..10}; do
-              if docker pull registry.redhat.io/rhel7:7.6-151.1550575774; then
+              if docker pull registry.redhat.io/rhel7:7.6; then
                 success="true"
                 break
               fi
