--- a/image/templates/openshift/kubectl/sensor-rbac.yaml
+++ b/image/templates/openshift/kubectl/sensor-rbac.yaml
@@ -376,7 +376,7 @@ roleRef:
   apiGroup: rbac.authorization.k8s.io
 ---
 kind: SecurityContextConstraints
-apiVersion: v1
+apiVersion: security.openshift.io/v1
 metadata:
   annotations:
     kubernetes.io/description: sensor is the security constraint for the sensor server
@@ -419,7 +419,7 @@ volumes:
 ---
 {{if ne .CollectionMethod "NO_COLLECTION"}}
 kind: SecurityContextConstraints
-apiVersion: v1
+apiVersion: security.openshift.io/v1
 metadata:
   annotations:
     kubernetes.io/description: This SCC is based on privileged, hostaccess, and hostmount-anyuid
