--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -620,6 +620,7 @@ commands:
 
     steps:
       - checkout
+      - check-backend-changes
 
       - steps: << parameters.determine-whether-to-run >>
 
@@ -782,6 +783,17 @@ commands:
             fi
             <</ parameters.validate-autoupgrade-label >>
             exit 0
+
+  check-backend-changes:
+    steps:
+      - run:
+          name: Check if there were any backend changes
+          command: |
+            if [[ "$CIRCLE_BRANCH" == "master" || -n "$CIRCLE_TAG" || "$CIRCLE_BRANCH" =~ ^release/.* ]]; then
+              exit 0  # Always run on master, tags, or release branches
+            fi
+            fork_point="$(git merge-base --fork-point origin/master)"
+            git diff --name-only "$fork_point" | egrep -qv '^ui/' || circleci step halt
 
 jobs:
 
@@ -1219,7 +1231,6 @@ jobs:
 
     steps:
       - checkout
-
       - check-label-to-skip-tests:
           label: ci-no-k8s-tests
 
@@ -1330,6 +1341,7 @@ jobs:
       - POD_SECURITY_POLICIES: "true"
     steps:
       - checkout
+      - check-backend-changes
       - check-label-to-skip-tests:
           label: ci-no-qa-tests
 
@@ -1367,6 +1379,7 @@ jobs:
 
     steps:
       - checkout
+      - check-backend-changes
       - *check-qa-tests-kernel-module-label
       - provision-gke-cluster:
           cluster-id: qa-tests-kernel-module
@@ -1397,6 +1410,7 @@ jobs:
     <<: *defaults
     steps:
       - checkout
+      - check-backend-changes
       - provision-gke-cluster:
           cluster-id: upgrade-test
 
@@ -1409,6 +1423,7 @@ jobs:
 
     steps:
       - checkout
+      - check-backend-changes
       - setup_remote_docker
       - attach_workspace:
           at: /go/src/github.com/stackrox/rox
@@ -1529,6 +1544,7 @@ jobs:
     <<: *defaults
     steps:
       - checkout
+      - check-backend-changes
       - *checkScaleLabel
       - provision-gke-cluster:
           cluster-id: scale-test
@@ -1544,6 +1560,7 @@ jobs:
 
     steps:
       - checkout
+      - check-backend-changes
       - *checkScaleLabel
       - setup_remote_docker
       - attach_workspace:
@@ -1588,6 +1605,7 @@ jobs:
       - OPENSHIFT_AUTOMATION_VERSION: snapshot-0.4.2-7-g6255c49
     steps:
       - checkout
+      - check-backend-changes
       - *checkOpenshiftLabel
 
       - run:
@@ -1671,6 +1689,7 @@ jobs:
 
     steps:
       - checkout
+      - check-backend-changes
       - *checkOpenshiftLabel
       - setup_remote_docker
 
