--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -626,6 +626,7 @@ commands:
 
     steps:
       - checkout
+      - check-backend-changes
 
       - steps: << parameters.determine-whether-to-run >>
 
@@ -789,6 +790,17 @@ commands:
             fi
             <</ parameters.validate-autoupgrade-label >>
             exit 0
+
+  check-backend-changes:
+    steps:
+      - run:
+          name: Check if there were any backend changes
+          command: |
+            if [[ "$CIRCLE_BRANCH" == "master" || -n "$CIRCLE_TAG" || "$CIRCLE_BRANCH" =~ ^release/.* ]]; then
+              exit 0  # Always run on master, tags, or release branches
+            fi
+            merge_base="$(git merge-base HEAD origin/master)"
+            { git diff --name-only "${merge_base}" || echo "???" ; } | egrep -qv '^ui/' || circleci step halt
 
 jobs:
 
@@ -1260,7 +1272,6 @@ jobs:
 
     steps:
       - checkout
-
       - check-label-to-skip-tests:
           label: ci-no-k8s-tests
 
@@ -1371,6 +1382,7 @@ jobs:
       - POD_SECURITY_POLICIES: "true"
     steps:
       - checkout
+      - check-backend-changes
       - check-label-to-skip-tests:
           label: ci-no-qa-tests
 
@@ -1408,6 +1420,7 @@ jobs:
 
     steps:
       - checkout
+      - check-backend-changes
       - *check-qa-tests-kernel-module-label
       - provision-gke-cluster:
           cluster-id: qa-tests-kernel-module
@@ -1438,6 +1451,7 @@ jobs:
     <<: *defaults
     steps:
       - checkout
+      - check-backend-changes
       - provision-gke-cluster:
           cluster-id: upgrade-test
 
@@ -1450,6 +1464,7 @@ jobs:
 
     steps:
       - checkout
+      - check-backend-changes
       - setup_remote_docker
       - attach_workspace:
           at: /go/src/github.com/stackrox/rox
@@ -1570,6 +1585,7 @@ jobs:
     <<: *defaults
     steps:
       - checkout
+      - check-backend-changes
       - *checkScaleLabel
       - provision-gke-cluster:
           cluster-id: scale-test
@@ -1585,6 +1601,7 @@ jobs:
 
     steps:
       - checkout
+      - check-backend-changes
       - *checkScaleLabel
       - setup_remote_docker
       - attach_workspace:
@@ -1629,6 +1646,7 @@ jobs:
       - OPENSHIFT_AUTOMATION_VERSION: snapshot-0.4.2-7-g6255c49
     steps:
       - checkout
+      - check-backend-changes
       - *checkOpenshiftLabel
 
       - run:
@@ -1712,6 +1730,7 @@ jobs:
 
     steps:
       - checkout
+      - check-backend-changes
       - *checkOpenshiftLabel
       - setup_remote_docker
 
